Fixed Horizontal Scrolling

--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,12 @@
   margin: 0;
 }
 
+body {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 h1,
 h2,
 h3,
@@ -126,11 +132,12 @@ h6 {
 .menu-box {
   background-color: var(--accent-color);
   background-attachment: fixed;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   list-style: none;
   visibility: hidden;
   position: absolute;
+  overflow-x: hidden;
 }
 
 .menu-item {
